Actualización .css y .html 30_10_24 12:21

--- a/Practica2_Fabiola.html
+++ b/Practica2_Fabiola.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica2_Plantilla16_Fabiola.html</title>
+    <title>PineApplePen</title>
+    <link rel="stylesheet" href="Practica2_Fabiola.css">
 </head>
 <body>
-    <h1>Prueb</h1>
+    <header>
+        <div class="container-inicio">
+            <h1>PineApplePen</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Marcas</a></li>
+                    <li><a href="#">Tiendas</a></li>
+                    <li><a href="#">Sobre nosotros</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <div class="slider">
+                <div class="slide active">
+                    <img src="https://via.placeholder.com/1200x400" alt="Slide 1">
+                </div>
+                <div class="slide">
+                    <img src="https://via.placeholder.com/1200x400" alt="Slide 2">
+                </div>
+                <div class="slide">
+                    <img src="https://via.placeholder.com/1200x400" alt="Slide 3">
+                </div>
+            </div>
+            <h2>Promoción</h2>
+            <p>Descubre nuestras últimas ofertas</p>
+            <button>Ver más</button>
+        </div>
+    </section>
+    <section class="products">
+        <div class="container">
+            <h2>Nuestros productos</h2>
+            <div class="product-grid">
+                <div class="product">
+                    <img src="https://via.placeholder.com/300x300" alt="Product 1">
+                    <h3>Producto 1</h3>
+                    <p>Descripción del producto 1</p>
+                    <button>Ver más</button>
+                </div>
+                <div class="product">
+                    <img src="https://via.placeholder.com /300x300" alt="Product 2">
+                    <h3>Producto 2</h3>
+                    <p>Descripción del producto 2</p>
+                    <button>Ver más</button>
+                </div>
+                <div class="product">
+                    <img src="https://via.placeholder.com/300x300" alt="Product 3">
+                    <h3>Producto 3</h3>
+                    <p>Descripción del producto 3</p>
+                    <button>Ver más</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 PineApplePen</p>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
