Añadir mapa en HTML Metro AlfonsoXIII Madrid

--- a/Practica2_Fabiola.html
+++ b/Practica2_Fabiola.html
@@ -61,7 +61,7 @@
     <!-- Ubicación y Atención al Cliente -->
     <footer class="ubicacion">
         <div class="map">
-            <img src="imagenes/map.jpg" alt="Mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.2113027453283!2d-3.670244923417971!3d40.448459971434595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228d15e6fd371%3A0xc7b6ebd634e332ca!2sMetro%20Alfonso%20XIII!5e0!3m2!1ses!2ses!4v1731405758936!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p>C/ Inexistente nº 0, Madrid</p>
         </div>
         <div class="info">
