Update 15 Nov Practica2_Fabiola.html
Añadimos tres dots en la seccion de promocion
<span class="dot"></span>
<span class="dot"></span>
<span class="dot"></span>

--- a/Practica2_Fabiola.html
+++ b/Practica2_Fabiola.html
@@ -26,6 +26,11 @@
         <img src="imagenes/pincels.jpg" alt="Promoción de lápices" class="promo-img">
         <span class="arrow left">&#10094;</span>
         <span class="arrow right">&#10095;</span>
+        <div class="promo-dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </section>
 
     <!-- Productos y Recomendados -->
